--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <header>
             <div class="rings"></div>
             <h1>Вероника & Иван</h1>
-            <div class="date">15 сентября 2024</div>
+            <div class="date">14 Авогуста 2025</div>
             <div class="divider"></div>
         </header>
 
