--- a/index.html
+++ b/index.html
@@ -240,15 +240,15 @@
     </div>
 </section>
 
-        <section id="banquet">
+     <section id="banquet">
     <h2>Банкет</h2>
     <div class="card">
-        <h3>Ресторан «Валенок»</h3>
-        <p><i class="fas fa-map-marker-alt" style="color: var(--rose);"></i> Кострома, ул. Никитская, 58-а</p>
-        <p><i class="far fa-clock" style="color: var(--rose);"></i> На согласовании</p>
+        <h3>Апартаменты «LOFT PLACE»</h3>
+        <p><i class="fas fa-map-marker-alt" style="color: var(--rose);"></i> Кострома, бул. Михалевский, 1А </p>
+        <p><i class="far fa-clock" style="color: var(--rose);"></i> 17:00</p>
         <div class="map">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2128.2410892567045!2d40.95728973026651!3d57.76330938402058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46ad4fdb868f2eb1%3A0x92ed65191efedf61!2z0JLQsNC70LXQvdC-0Lo!5e0!3m2!1sru!2sru!4v1747234642778!5m2!1sru!2sru"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d237.16593066060477!2d40.919781458348794!3d57.73890801908913!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46ad5199158b33e3%3A0xf3972a5b6257ca0a!2sLOFT%20PLACE!5e0!3m2!1sru!2sru!4v1748289836180!5m2!1sru!2sru"
                 width="100%"
                 height="250"
                 style="border:0; border-radius: 6px;"
